# gerber

./: .coverage  .gitignore  COORDINATES.md  README.md  RECOMMENDATIONS.md  alignment.py  aoi_loader.py  app.py  cache_manager.py  clustering.py  create_dummy_aoi_files.py  create_dummy_odb.py  create_realistic_dummy.py  create_sample_dataset.py  create_test_svg.py  diff_check.py  export.py  gerber_renderer.py  job_registry.py  main.py  odb_parser.py  pyproject.toml  render_layer.py  requirements.txt  scoring.py  svg_utils.py  visualizer.py
.hypothesis/constants/: dadd8837b8b1e623
core/: cache.py  data_utils.py  layer_renderer.py  panel_builder.py  pipeline.py  state.py  step_layout.py
docs/: coordinate_systems.md  odb_rendering_bug_fixes.md
odb/: __init__.py  archive.py  constants.py  features.py  geometry.py  layout.py  models.py  symbols.py
services/: aoi_service.py  odb_service.py  worker.py
test_2F_odb/matrix/: matrix
test_2F_odb/misc/: attrlist  info
test_2F_odb/steps/test_step/: profile
test_2F_odb/steps/test_step/layers/2B/: features
tests/: conftest.py  test_alignment.py  test_aoi_loader.py  test_clustering.py  test_export.py  test_job_registry.py  test_odb_units.py  test_scoring.py  test_visualizer.py
tools/: benchmark.py  create_dummy_aoi_files.py  create_dummy_heatmap_data.py  create_realistic_dummy.py  create_sample_dataset.py  create_test_svg.py  debug_coords.py  inspect_excel.py
ui/: sidebar.py
views/: cluster_triage.py  panel_heatmap.py  panel_overview.py  panelization_data.py  panelization_data_explained.md  unit_commonality.py
(+1 files in other folders)
