[project]
name = "gerber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.9.0",
    "gerbonara>=1.6.2",
    "hypothesis>=6.0.0",
    "kaleido>=0.2.1",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=6.0.0",
    "pyarrow>=14.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scikit-learn>=1.3.0",
    "shapely>=2.0.0",
    "streamlit>=1.50.0",
    "unlzw3>=0.2.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
